syntax="proto3";

package main;

option go_package = "../pb_wallet";

message DepositRequest {
	string WalletID = 1;
	double Amount = 2;
	int64 CreatedAt = 3;
}