syntax="proto3";

package main;

option go_package = "../pb_wallet";

message WalletInfo {
    string WalletID = 1;
    double LastDepositAmount = 2;
    double RollingPeriodCumulative = 3;
    bool AboveThreshold = 4;
    int64 CreatedAt = 5;
}

message WalletInfoList {
    repeated WalletInfo List = 1;
}